--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"/>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".LoginRegisterActivity"
             android:theme="@style/SplashScreen"/>
     </application>
 
