--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "google_maps_key",
+                (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "AIzaSyDacPwZkcBgfe3xjZsPeO3xKeRTI4alXZQ")
     }
     buildTypes {
         release {
@@ -32,6 +34,7 @@ dependencies {
     //ADDED LIB
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
+    compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.android.support:design:27.0.2'
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.google.firebase:firebase-database:11.8.0'
