--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.arx_era.rentmyvehicle">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,14 @@
         android:roundIcon="@drawable/ic_temp_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/api_key" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <!-- Splash screen -->
         <activity
@@ -30,7 +39,7 @@
             android:name=".MainActivity"
             android:label="@string/app_name"/>
         <activity android:name=".LoginRegisterActivity"
-            android:theme="@style/SplashScreen"/>
+            android:theme="@style/SplashScreen" />
     </application>
 
 </manifest>
