--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     //ADDED LIB
+    compile 'com.firebase:geofire-android:2.1.2'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:appcompat-v7:27.0.2'
     compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
